The two converting tools read standard input and write standard output (#75)
dtx-write and dtx-package took two file names and wrote their report on
standard output. Each now reads its input on standard input and writes its
file on standard output, with the report, the faults and the usage on
standard error, so a conversion composes in a pipe:

    bin/dtx-write -v2 -k1 < in.csv | bin/dtx-package > out.bin

The exits are the three they were: 0 done, 1 the input is wrong, 2 the call
is wrong.

- dtx-write: -text writes the table as comma separated text, in place of
  the .csv the output name used to end in. -text with -v is a wrong call.
- dtx-package: one table comes in on standard input, and several are named
  as before, the image going to standard output either way. -s writes the
  figures there too.
- dtx-blobs writes twenty-two images into the directories it is named, so
  it keeps them; its listing moves to standard error.

All three trees follow, since ParityTest compares their bytes and their
help texts: Java, Go and C#. bin/dtx-run gave the build standard input,
which is a tool's input now, so the build reads /dev/null.

105 tests, go test ./... green, and release/publish.sh writes a release
whose smoke test runs a table through both tools in a pipe, outside the
repository.

Co-authored-by: Claude Opus 5 <noreply@anthropic.com>